<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.si.skozak_ikaur_mapd711_onlinepurchase.CustomerDetails"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/orderDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/customerFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:textColor="@color/colorSecondaryText" />

    <EditText
        android:id="@+id/customerLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/lastName"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/colorSecondaryText" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textMultiLine"
        android:textColor="@color/colorSecondaryText" />

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/city"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/colorSecondaryText" />

    <EditText
        android:id="@+id/postalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/postalCode"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/colorSecondaryText" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmButton" />

</LinearLayout>
