<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.si.skozak_ikaur_mapd711_onlinepurchase.MainActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checkedButton="@+id/radioCustomer"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorAccent"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/customer"
            android:textColor="@color/colorAccent"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorAccent"
            android:padding="10dp"
            android:text="@string/clerk"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <EditText
        android:id="@+id/loginField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorSecondaryText"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorSecondaryText" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="logIn"
        android:text="@string/loginButton"
        android:textColor="@color/colorTextIcons" />

    <TextView
        android:id="@+id/textViewTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

</LinearLayout>
