<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/order_product_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:gravity="bottom"
            android:text="@string/blonde"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:layout_gravity="bottom"/>

        <TextView
            android:id="@+id/order_product_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:ems="2"
            android:labelFor="@id/order_product_amount"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:layout_gravity="bottom"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/order_id"
            android:text="@string/order_id"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/order_status"
            android:text="@string/order_status"/>

    </LinearLayout>




</LinearLayout>